--- a/src/common.scss
+++ b/src/common.scss
@@ -6,6 +6,13 @@
   cursor: pointer;
   font-size: 16px;
   font-weight: 500;
+
+  &:hover {
+    background-color: rgb(255, 0, 242);
+    transition: 1s;
+    border: none;
+    color: white;
+  }
 }
 
 .icon-button {
