--- a/src/components/event/event.scss
+++ b/src/components/event/event.scss
@@ -1,7 +1,7 @@
 .event {
   position: absolute;
   width: 80%;
-  background-color: cornflowerblue;
+  background-color: rgb(255, 3, 196);
   z-index: 1;
   border-radius: 8px;
   padding: 8px;
@@ -15,13 +15,35 @@
     margin-bottom: 8px;
   }
 
+  &__delete-btn {
+    display: none;
+  }
+
   &:hover {
     font-weight: bold;
     background-color: red;
-  }
-}
 
-.delete-event-btn {
-  cursor: pointer;
-  border: none;
+    .event__title {
+      white-space: normal;
+    }
+
+    .event__delete-btn {
+      font-size: 10px;
+      display: block;
+      cursor: pointer;
+      border: none;
+
+      border-radius: 25%;
+      position: absolute;
+      top: 2px;
+      right: 3px;
+      width: 18px;
+      height: 18px;
+      padding: 0;
+      margin: 0;
+      line-height: 10px;
+      background-color: aqua;
+      color: rgb(255, 0, 0);
+    }
+  }
 }
